# inotify

./: Cargo.toml
src/: events.rs  fd_guard.rs  inotify.rs  lib.rs  stream.rs  watches.rs
