[package]

name    = "inotify"
version = "0.8.3"
authors = [
  "Hanno Braun <mail@hannobraun.de>",
  "Félix Saparelli <me@passcod.name>",
  "Cristian Kubis <cristian.kubis@tsunix.de>",
  "Frank Denis <github@pureftpd.org>"
]
edition = "2018"

description   = "Idiomatic wrapper for inotify"
documentation = "https://docs.rs/inotify"
repository    = "https://github.com/hannobraun/inotify"
license       = "ISC"
readme        = "README.md"

keywords   = ["inotify", "linux"]
categories = ["api-bindings", "filesystem"]
exclude    = ["/.travis.yml", "/inotify-rs.sublime-project"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci   = { repository = "inotify-rs/inotify" }


[features]
default = ["stream"]
stream = ["futures-core", "mio", "tokio"]


[dependencies]
bitflags     = "1"
futures-core = { version = "0.3.1", optional = true }
inotify-sys  = {git="https://github.com/lengyijun/inotify-sys"}
mio          = { version = "0.6", optional = true }
tokio        = { version = "0.2.2", optional = true, features = ["io-driver"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs", "thread", "backtrace"] }
sgx_libc = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dev-dependencies]
tempdir      = "0.3"
futures-util = "0.3.1"
tokio        = { version = "0.2.1", features = ["macros", "rt-core"] }

[[example]]
name              = "stream"
required-features = ["stream"]

[[example]]
name = "watch"
